Fix dark mode

--- a/view/field/index.css
+++ b/view/field/index.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 40px;
   padding: 0 12px;
+  color: inherit;
   background: var(--surface-ui-regular);
   border: none;
   border-radius: var(--radius);
